Add constant places test